<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	<ImageView android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:src="@drawable/logo"
		android:layout_gravity="center_horizontal" android:padding="20px" />
	<Button android:id="@+id/main_btn_free_play"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:text="@string/main_btn_free_play" />
	<Button android:id="@+id/main_btn_time_play"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:text="@string/main_btn_time_play" />
	<Button android:id="@+id/main_btn_cfop_viewer"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:text="@string/main_btn_cfop_viewer" />
	<Button android:id="@+id/main_btn_cube_solver"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:text="@string/main_btn_cube_solver" />
	<Button android:id="@+id/main_btn_preference"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:text="@string/main_btn_preference" />
	<Button android:id="@+id/main_btn_about" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:text="@string/main_btn_about" />
</LinearLayout>
